# steel-alpha

./: LICENSE  README.md
builder/: CMakeLists.txt  llvm11.patch  llvm_build.txt
builder/common/: aux.cpp  aux.hpp  fun_sequences_std17.hpp  step_enum.hpp  typedef.hpp  util.hpp
builder/common/inject/: syntax.hpp  syntax_def.hpp  syntax_str.cpp  syntax_str.hpp
builder/common/it/: ast_analyzer.cpp  ast_analyzer.hpp  base_callback.cpp  base_callback.hpp  callback_enum.hpp  matchers.hpp
builder/common/test/: compare.cpp  compare.hpp  enum.hpp  run.cpp  run.hpp
builder/compile/: README.md  base.cpp  base.hpp  call_cc1.cpp  cc1_main.cpp  compile_aux.hpp  compile_obj.cpp  compile_pcm.cpp  execute_invocation.cpp  interface_clang.cpp  interface_clang.hpp  lib.cmake  run.cpp  run_builder_tests.cpp
builder/driver/: entry.cmake  entry.cpp  interface.hpp
builder/files/: enum.hpp  interface.hpp  lib.cmake  typedef.hpp
builder/files/felement/: base.cpp  base.hpp  compare_def.hpp  decl.hpp  def.hpp  instantiations.cpp
builder/files/module/: decl.hpp  def.cpp
builder/files/name/: decl.hpp  def.cpp  factory.cpp  factory.hpp  visible.cpp
builder/files/paths/: aux.cpp  aux.hpp  decl.hpp  def.hpp  dir.hpp  enum.hpp  instantiations.cpp  todo.txt
builder/files/semantic/: bitcode.cpp  bitcode.hpp  dependent.hpp  final.hpp  inspectable.hpp  interface.hpp  modifiable.hpp  scanable.hpp  target.hpp  translatable.hpp  undefined.hpp
builder/files/state/: decl.hpp  def.hpp  find.cpp  register_yield.cpp  register_yield.hpp  register_yield_def.hpp
builder/files/traits/: autogen.hpp  code.cpp  code.hpp  compilable.hpp  compiled.hpp  executable.hpp  extension.hpp  input.hpp  inspected.hpp  interface.hpp  lib.hpp  runtime.hpp  sgraph.hpp  translation.hpp  undefined.hpp
builder/generate/: gen_kind_enum.hpp  generator.hpp  lib.cmake  platform.txt  run.cpp  run_builder_tests.cpp
builder/generate/run/: app_enum.cpp  app_graph.cpp  app_proxy.cpp  aux_enum.cpp  aux_rt.cpp  aux_template.cpp  enum_map.hpp  head.hpp  platform_enum.cpp  platform_graph.cpp  runtime_instrument_enum.cpp  runtime_test.cpp
builder/inspect/: consumer.clg.cpp  consumer.clg.hpp  inspector.cpp  inspector.hpp  lib.cmake  run.cpp  run_builder_tests.cpp
builder/inspect/cb/: calls.clg.cpp  ctxts.clg.cpp  defs.clg.cpp  loops.clg.cpp  ops.clg.cpp  returns.clg.cpp  tasks.clg.cpp  tasks_prop.clg.cpp
builder/inspect/propagate/: configure_fun_args.cpp  interface.hpp  tasks_upstream.cpp
builder/link/: base.cpp  base.hpp  entry.cpp  lib.cmake  run.cpp  run_builder_tests.cpp
builder/options/: enum.hpp  init.cpp  init.hpp  interface.hpp  lib.cmake  traits.hpp  typedef.hpp
builder/options/state/: decl.hpp  def.cpp  def.hpp  log.hpp
builder/scan/: capture.cpp  lexer.cpp  lexer.hpp  lexer_def.hpp  lib.cmake  run.cpp  run_builder_tests.cpp
builder/source/: README.md  lib.cmake  seqdef.hpp  sequences.hpp
builder/source/object/: base.clg.cpp  (+5 more)
builder/test/: all.sh  runtime.sh
builder/translate/: consumer.clg.cpp  consumer.clg.hpp  lib.cmake  run.cpp  run_builder_tests.cpp  translator.cpp  translator.hpp
(+648 files in other folders)
